# nexuralnetwork

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
TestingData/: xor_inputData.txt
TrainingData/xor/: trainingData.txt
VS14/: neXuralNet.sln
VS14/neXuralNet/: neXuralNet.vcxproj  neXuralNet.vcxproj.filters  packages.config  ~AutoRecover.neXuralNet.vcxproj
VS14/python/: packages.config  python.vcxproj  python.vcxproj.filters
VS14/samples/: packages.config  samples.vcxproj  samples.vcxproj.filters
VS14/tests/: packages.config  tests.vcxproj  tests.vcxproj.filters
configs/: network-full.json  trainer.json
configs/mnist_example/: network_mnist_big.json  network_mnist_selu.json  network_mnist_small_net.json  network_mnist_small_net_dropout.json  trainer_mnist.json  trainer_selu.json  trainer_selu_test.json
data/and_relu/: network.json  targetData.txt  trainer.json  trainingData.txt
data/and_relu_softmax/: network.json  targetData.txt  trainer.json  trainingData.txt
data/and_tanh/: network.json  trainer.json
data/mnist_mse/: mnist.json  network.json
data/mnist_softmax/: caffe-network.json  good-mnist-5k.json  mnist-60k.json  mnist.json  network.json  trainer.json
data/xor_relu/: network.json  targetData.txt  trainer.json  trainingData.txt
data/xor_relu_softmax/: network.json  targetData.txt  trainer.json  trainingData.txt
default_configs/: all_network_layers.json  default_trainer.json  network.json  trainer.json
examples/: and_gate_with_relu.h  and_gate_with_relu_softmax.h  and_gate_with_tanh.h  main_tests.cpp  mnist_softmax.h  xor_gate_with_relu.h  xor_gate_with_relu_softmax.h
include/nexuralnet/: dnn.h  experimental.h  tests.h  tools.h
include/nexuralnet/api/: exports_api.h
include/nexuralnet/dnn/solvers/: sgd.h  (+6 more)
include/nexuralnet/experimental/: core.h
include/nexuralnet/tests/: run_tests.cpp
include/nexuralnet/tools/: converter.cpp  converter.h  data_reader.cpp  data_reader.h  data_writer.cpp  data_writer.h
neXuralNet/: neXuralNet.sln
neXuralNet/ConfigFiles/: network-full.json  network.json
neXuralNet/Examples/: Examples.vcxproj
neXuralNet/demo/: and_gate_with_relu.h  and_gate_with_relu_softmax.h  and_gate_with_tanh.h  mnist_softmax.h  xor_gate_with_relu.h  xor_gate_with_relu_softmax.h
neXuralNet/dnn/data_types/: general_data_types.h  layer_settings.h  layer_shape.h  tensor.cpp  tensor.h
neXuralNet/dnn/network/: network.cpp  network.h  network_trainer.cpp  network_trainer.h
neXuralNet/dnn/solvers/: base_solver.h  i_solver.h  sgd.h  sgd_momentum.h
neXuralNet/dnn/utility/: config_reader.h  converter.h  helper.h  params_parser.h
neXuralNet/neXuralNet/: Source.cpp  activation_functions.h  and_gate_with_relu.h  and_gate_with_relu_softmax.h  and_gate_with_tanh.h  average_pooling_layer.h  base_serializer.h  base_solver.h  bgr_image_input_layer.h  computational_base_layer.h  computational_layers.h  config_reader.h  converter.h  convolutional_layer.h  data_parser.h  data_reader.h  data_serializer.h  data_to_tensor_converter.h  data_types.h  dropout_layer.h  exceptions.h  fully_connected_layer.h  general_data_types.h  generate_test_data.h  gray_image_input_layer.h  helper.h  i_computational_layer.h  i_input_layer.h  i_layer.h  i_loss_layer.h  i_solver.h  input_base_class.h  input_layer.h  input_layers.h  json_config_reader.h  json_data_serializer.h  json_engine_reader.h  leaky_relu_layer.h  loss_base_layer.h  loss_functions.h  (+32 more)
neXuralNet/neXuralNet/configs/: trainer.json
neXuralNet/neXuralNet/demo/: and_gate_with_relu.h  and_gate_with_relu_softmax.h  and_gate_with_tanh.h  main_tests.cpp  mnist_softmax.h  xor_gate_with_relu.h  xor_gate_with_relu_softmax.h
neXuralNet/neXuralNet/tools/: data_reader.h
neXuralNet/tools/: data_reader.h  generate_test_data.h
python/: network.cpp  network.h  py_nexuralnet.cpp
samples/: and_gate_with_relu.h  and_gate_with_relu_softmax.h  and_gate_with_tanh.h  att_softmax.h  mnist_mse.h  mnist_softmax.h  samples.cpp  stdafx.h  xor_gate_with_relu.h  xor_gate_with_relu_softmax.h
src/nexuralnet/: dnn.h  tools.h
src/nexuralnet/tools/: data_reader.cpp  data_reader.h  data_writer.cpp  data_writer.h
tests/: network_test.cpp  run_tests.cpp  stdafx.h  tests.h
tests/layers_tests/: average_pooling_layer_test.h  convolutional_layer_test.h  fully_connected_layer_test.h  leaky_layer_test.h  max_pooling_layer_test.h  relu_layer_test.h  softmax_loss_layer_test.h
(+177 files in other folders)
